--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@types/google-libphonenumber": "^7.4.17",
     "core-js": "^2.5.4",
     "firebase": "^6.3.1",
     "firebaseui": "^4.1.0",
     "firebaseui-angular": "^4.0.0",
+    "google-libphonenumber": "^3.2.3",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
